--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ckd-lab-analyzer-ai",
+  "name": "ia-analisador-de-exames-drc",
   "private": true,
   "version": "0.0.0",
   "type": "module",
